{
    "name": "InputControls",
    "maps": [
        {
            "name": "Player",
            "id": "fd62e94d-83c1-4286-b165-1f3499de2bb0",
            "actions": [
                {
                    "name": "SendCommand",
                    "type": "Button",
                    "id": "23bf4e16-14a1-474b-b80a-9ba3da3c1fc0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnableCommendQueuing",
                    "type": "Button",
                    "id": "aa97e346-a200-4bdd-bf79-1c31341603f1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "d73c23ae-089c-4e7b-a847-9107d23df77f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectSame",
                    "type": "Button",
                    "id": "c90dbfba-d638-4fd8-8a9a-194c182b1791",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "MultiTap(tapDelay=0.35)",
                    "initialStateCheck": false
                },
                {
                    "name": "StartSelecting",
                    "type": "Button",
                    "id": "7fcdf546-9241-4f7e-9f37-a51d30753833",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "StopSelecting",
                    "type": "Button",
                    "id": "3a0172d6-95e7-4099-9e3f-1b8f1fd730f9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "c1b1734c-1140-4eec-b0fb-742f4bd70166",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c3df95ed-b334-46dc-8aa7-5672ba6a9173",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SendCommand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4e590ed-abc1-4fe1-9376-1682bc8e5470",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnableCommendQueuing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f206c40-021a-4f04-810f-aa4fa17851d0",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "466f65d8-c4d6-4645-88cf-6e089187a60d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b4fd832-74b6-455b-95a1-9af65974f224",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartSelecting",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "75ea9e1c-cde5-4399-86a7-21fbfbb984a0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StopSelecting",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f571fdeb-ae5a-4907-b2f3-c73f1168ea92",
                    "path": "<Keyboard>/pause",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "4fa9c010-f1d2-4c71-bce7-83aa4c660c3f",
            "actions": [
                {
                    "name": "Focus",
                    "type": "Button",
                    "id": "5464a8a7-9840-448f-9f66-9a514f0c9857",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zoom",
                    "type": "PassThrough",
                    "id": "03320fc5-8b34-4076-8478-9ed89d50ccba",
                    "expectedControlType": "Axis",
                    "processors": "Clamp(min=-1,max=1)",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScreenPosition",
                    "type": "Value",
                    "id": "e7fae129-cce3-4c2c-b96c-22d503da83ef",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraRotationDirection",
                    "type": "Value",
                    "id": "bbfb9165-b74e-4c8c-a8f9-19167fb7522a",
                    "expectedControlType": "Axis",
                    "processors": "Clamp(min=-1,max=1)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "EnableCameraRotation",
                    "type": "Button",
                    "id": "291c9503-3aae-47aa-ae4f-f43374094915",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c5c3aacc-9843-4671-b8b0-d11fd9f1730f",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Focus",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46ef788c-3539-4768-87e9-d07d32218aaf",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "efef31de-e6de-4887-978d-feea7e2a16fc",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScreenPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00856612-2f55-476e-b48c-82b3de2b4bad",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotationDirection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "292dcaa5-38b3-456e-86c2-21bb54f11ba2",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnableCameraRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "c02f7617-7776-47ae-8fe6-ce99309f68bc",
            "actions": [
                {
                    "name": "Close",
                    "type": "Button",
                    "id": "64e6f3c2-31c4-4a02-848f-d9e3010c9e6b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScreenPosition",
                    "type": "Value",
                    "id": "8369877b-8153-4190-9238-543b58d439ed",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4207d6af-8a2f-424c-9ad6-9c400943abdb",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Close",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f81e33e-fe49-48ff-814b-65aab1ae8f74",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScreenPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}